--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,1 @@
-{"name":"Lady Newton","short_name":"Lady Newton","start_url":"/aplicativo","display":"standalone","theme_color":"#000000","background_color":"#000000","icons":[{"src":"assets/icons/512x512.png","sizes":"512x512","type":"image/png"}]}
+{"name":"Lady Newton","short_name":"Lady Newton","start_url":"/","display":"standalone","theme_color":"#000000","background_color":"#000000","icons":[{"src":"assets/icons/512x512.png","sizes":"512x512","type":"image/png"}]}
